@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r1p9
+  {
+    Modules = LHCbDIRAC:v9r1p9, LHCbWebDIRAC:v4r4p5
+    Depends = DIRAC:v6r19p17
+    LcgVer = v13r0
+  }
+
   v9r1p8
   {
     Modules = LHCbDIRAC:v9r1p8, LHCbWebDIRAC:v4r4p4
